--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,9 @@ s      </nav>
                                   <select class="dropdown col-sm-6" name="equipo" id="opcion" name="opcion">
                                     <option value="MiniSplit">MiniSplit</option>
                                     <option value="Chillers">Chillers</option>
-                                    <option value="Divididos">Divididos</option>
+                                    <option value="Daikin Divididos">Daikin Divididos</option>
+                                    <option value="York Paquetes">York Paquetes</option>
+                                    <option value="Evaporadores">Evaporadores</option>
                                 </select>
                                   <br>
                                   <div class="col-12">
