--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -160,8 +160,8 @@
               <div class="icon">
                 <i class="fas fa-diagnoses"></i>
               </div>
-              <h3 class="texto-justificado">Inspección y Diagnóstico.</h3>
-              <p class="texto-justificado">Evaluación Inicial.</p>
+              <h3 class="texto-justificado">Inspección y diagnóstico.</h3>
+              <p class="texto-justificado">Evaluación inicial.</p>
               <ul>
                 <li class="texto-justificado">Nuestros técnicos especializados realizan una inspección completa del sistema para identificar posibles problemas y determinar el estado general del equipo.</li>
               </ul>
