--- a/index.html
+++ b/index.html
@@ -343,6 +343,13 @@
       <div class="slide">
         <img src="img/logo-aires-mirage.png" alt="imagen2">
       </div>
+      <div class="slide">
+        <img src="img/Honeywell-Logo.png" alt="imagen8">
+      </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       &nbsp;
       &nbsp;
       &nbsp;
@@ -363,6 +370,13 @@
       &nbsp;
       <div class="slide">
         <img src="img/f.1649261342.jpg" alt="imagen5">
+      </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      <div class="slide">
+        <img src="img/Honeywell-Logo.png" alt="imagen8">
       </div>
       &nbsp;
       &nbsp;
@@ -412,6 +426,13 @@
       &nbsp;
       <div class="slide">
         <img src="img/f.1649261342.jpg" alt="imagen5">
+      </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      <div class="slide">
+        <img src="img/Honeywell-Logo.png" alt="imagen8">
       </div>
       &nbsp;
       &nbsp;
