--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
+
   <link href="img/logo-siarsa.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fuentes de Google -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -34,7 +34,7 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+
   <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
@@ -59,12 +59,11 @@
           <li><a href="politica-privacidad.html">Privacidad</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
-      </nav><!-- .navbar -->
+      </nav>
 
     </div>
-  </header><!-- fin Header -->
+  </header>
 
-  <!-- ======= Hero Section ======= -->
   <section id="hero" class="hero">
 
     <div class="info d-flex align-items-center">
@@ -98,12 +97,10 @@
 
     </div>
 
-  </section><!-- End Hero Section -->
+  </section>
 
   <main id="main">
 
-
-    <!-- ======= Services Section ======= -->
     <section id="blog" class="blog">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h1 class="text-center">Amplia gama de servicios en sitio </h1>
@@ -147,7 +144,7 @@
               </div>
 
             </div>
-          </div><!-- End post list item -->
+          </div>
 
           <div class="col-xl-4 col-md-6">
             <div class="post-item position-relative h-100">
@@ -164,7 +161,7 @@
               </div>
 
             </div>
-          </div><!-- End post list item -->
+          </div>
 
           <div class="col-xl-4 col-md-6">
             <div class="post-item position-relative h-100">
