--- a/contact.html
+++ b/contact.html
@@ -126,6 +126,7 @@ s      </nav>
                                       <option value="Trane">Trane</option>
                                       <option value="Daikin">Daikin</option>
                                       <option value="York4">York</option>
+                                      <option value="Honeywell">Honeywell</option>
                                   </select>
                                   <select class="dropdown col-sm-6" name="equipo" id="opcion" name="opcion">
                                     <option value="MiniSplit">MiniSplit</option>
