--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 
 
     <div id="cookie-consent">
-      <p>Este sitio utiliza cookies para mejorar su experiencia. Al continuar navegando, acepta nuestra <a href="politica.html">Política de Privacidad</a> y el uso de cookies.</p>
+      <p>Este sitio utiliza cookies para mejorar su experiencia. Al continuar navegando, acepta nuestra <a href="politica-privacidad.html">Política de Privacidad</a> y el uso de cookies.</p>
       <div>
           <button id="accept-cookies">Aceptar</button>
           <button id="decline-cookies">Denegar</button>
