--- a/about.html
+++ b/about.html
@@ -89,9 +89,9 @@
             <h2></h2>
             <div class="our-story">
               <h3>Alcance</h3>
-              <p class="texto-justificado">Contamos con ingenieros con conocimiento de nomrmatividades TIF, HACCP, NOM, NAFA (Asociación Nacional de filtración de Aire-USA); y personal calificado
-                con más de 25 años de experencia en el medio.</p>
-              <p class="texto-justificado">Construcción , Servicio y mantenimiento industrial a naves secas de congelación y conservación, servicios de ventilación y extración y aire acondicionado de hogar e industrial con personal calificacdo y certificado.</p>
+              <p class="texto-justificado">Contamos con ingenieros con conocimiento de normatividades TIF, HACCP, NOM, NAFA (Asociación Nacional de filtración de Aire-USA); y personal calificado
+                con más de 25 años de experiencia en el medio.</p>
+              <p class="texto-justificado">Construcción , Servicio y mantenimiento industrial a naves secas de congelación y conservación, servicios de ventilación y extracción y aire acondicionado de hogar e industrial con personal calificado y certificado.</p>
             </div>
           </div>
         </div>
