--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <img src="img/caluclode temperaturacontrolada.png" class="img-fluid" alt="">
               </div>
               <div class="post-content d-flex flex-column">
-                <h3 class="post-title texto-justificado">Cáculo, suministro e instalación de equipos para temperatura controlada</h3>
+                <h3 class="post-title texto-justificado">Cálculo, suministro e instalación de equipos para temperatura controlada</h3>
               </div>
             </div>
           </div>
@@ -303,13 +303,13 @@
         <div class="justify-content-between gy-4">
           <div class="col-lg-12 d-flex align-items-center" data-aos="fade-up">
             <div class="content">
-              <h3>¿Porqué elegir a SIARSA?</h3>
+              <h3>¿Por qué elegir a SIARSA?</h3>
               <h5>Tecnología Avanzada</h5>
               <p class="texto-justificado">Incorporamos las últimas tecnologías en nuestros sistemas para garantizar un rendimiento óptimo y duradero. Desde sistemas de climatización inteligentes hasta controles remotos fáciles de usar, te ofrecemos lo mejor en innovación.</p>
               <h5>Silenciosos y sin Problemas</h5>
               <p class="texto-justificado">Nuestros aires acondicionados y sistemas de refrigeración son conocidos por su funcionamiento silencioso y sin problemas. Disfruta de un ambiente tranquilo y fresco sin molestias ruidosas ni interrupciones.</p>
               <h5>Servicio y Soporte</h5>
-              <p class="texto-justificado">No solo vendemos productos, sino también ofrecemos un excepcional servicio post-venta. Nuestro equipo de expertos está disponible para ayudarte con la instalación, el mantenimiento y cualquier consulta que puedas tener.</p>
+              <p class="texto-justificado">No solo vendemos productos, sino también ofrecemos un excepcional servicio postventa. Nuestro equipo de expertos está disponible para ayudarte con la instalación, el mantenimiento y cualquier consulta que puedas tener.</p>
               <br>
               <p classs="texto-justificado">Para garantizar el correcto funcionamiento de una instalación, es necesario verificar el caudal en los conductos, de modo que se proporcione la cantidad correcta de aire renovado y se establezca una determinada temperatura y humedad de los locales.</p>
               <br>
