--- a/venta.html
+++ b/venta.html
@@ -115,9 +115,9 @@
                 <i class="fa-solid fa-trowel-bricks"></i>
               </div>
               <h3 class="texto-justificado">Reparación de piso epóxico</h3>
-              <p class="texto-justificado">Realizando estudios del suelo se determinará cual será el procedimiento para poder reparar.</p>
+              <p class="texto-justificado">Realizando estudios del suelo se determinará cuál será el procedimiento para poder reparar.</p>
               <br>
-              <p class="texto-justificado">Nuestro proceso de reparación de pisos epóxidos garantiza resultados de alta calidad, ofreciendo superficies resistentes, duraderas y visualmente atractivas.</p>
+              <p class="texto-justificado">Nuestro proceso de reparación de pisos epóxicos garantiza resultados de alta calidad, ofreciendo superficies resistentes, duraderas y visualmente atractivas.</p>
             </div>
           </div>
 
