--- a/disenoyconsultoria.html
+++ b/disenoyconsultoria.html
@@ -182,7 +182,7 @@
               <p class="texto-justificado">Optimización Energética.</p>
               <br>
               <ul>
-              <li class="texto-justificado">CCreamos estrategias para mejorar la eficiencia energética de los sistemas HVAC, considerando tecnologías sostenibles y prácticas de diseño ecoeficientes.</li>
+              <li class="texto-justificado">Creamos estrategias para mejorar la eficiencia energética de los sistemas HVAC, considerando tecnologías sostenibles y prácticas de diseño ecoeficientes.</li>
             </ul>
               <br>
               <p class="texto-justificado">Evaluación de Costos.</p>
@@ -205,7 +205,7 @@
               <p class="texto-justificado">Automatización y control.</p>
               <br>
               <ul>
-                <li class="texto-justificado"> Implementamos sistemas de automatización para controlar y monitorear el rendimiento del sistema HVAC en tiempo real, permitiendo ajustes rápidos y eficientes..</li>
+                <li class="texto-justificado"> Implementamos sistemas de automatización para controlar y monitorear el rendimiento del sistema HVAC en tiempo real, permitiendo ajustes rápidos y eficientes.</li>
               </ul>
                 <br>
               <p class="texto-justificado">Integración de energías renovables.</p>
