--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -121,7 +121,7 @@
                 <i class="fa-solid fa-tachograph-digital"></i>
               </div>
               <h3 class="texto-justificado">Mantenimiento de Racks de compresores (Control, Programación y Automatización)</h3>
-              <p class="texto-justificado">Se centra en garantizar el funcionamiento eficiente de kis sistemas de compresión, con un enfoque específico en el control, programación y automatización de estos equipops para un mejor rendimiento.</p>
+              <p class="texto-justificado">Se centra en garantizar el funcionamiento eficiente de los sistemas de compresión, con un enfoque específico en el control, programación y automatización de estos equipos para un mejor rendimiento.</p>
               <br>
               <p class="texto-justificado">Nuestros servicios de mantenimiento incluyen inspecciones regulares, ajustes precisos y actualizaciones de software para garantizar que los racks de compresores operen de manera eficiente y segura</p>
               <br>
