--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -82,11 +82,11 @@
             <div class="portfolio-description">
               <br>
               <p class="texto-justificado">
-                <strong>SIARSA</strong> , Es responsable de recabar sus datos personales, del uso que se le dé a los mismos y de su protección, Su información personal será utilizada para promover los 
+                <strong>SIARSA</strong>, Es responsable de recabar sus datos personales, del uso que se le dé a los mismos y de su protección, Su información personal será utilizada para promover los 
                 servicios y productos que ha solicitado, informarle sobre cambios en los mismos y evaluar la calidad del servicio que le brindamos.
               </p>
               <p class="texto-justificado">
-                Para las finalidades antes mencionadas, requerimos los siguientes datos personales: <strong>Nombre, Teléfono, Correo Electrónico y Ocupación </strong>, Usted tiene derecho a acceder, rectificar, y cancelar sus datos personales, asi como al tratamiento 
+                Para las finalidades antes mencionadas, requerimos los siguientes datos personales: <strong>Nombre, Teléfono, Correo Electrónico y Ocupación </strong>, Usted tiene derecho a acceder, rectificar, y cancelar sus datos personales, Así como al tratamiento 
                 de los mismos o revocar el consentimiento para tal fin nos haya otorgado, a través de los procedimientos que hemos implementado. Para conocer dichos procedimientos, los requisitos, los plazos, se puede poner en contacto con nuestro departamento de datos personales 
                 mediante el correo <strong>contacto@siarsa.com.mx</strong> que con gusto le atenderán.
               </p>
@@ -95,7 +95,7 @@
                 Así mismo, le informamos que sus datos personales pueden ser transferidos y tratados dentro y fuera del país, por distintas empresas a esta empresa. En este sentido, su información puede ser compartida a distintas empresas con el fin de hacer promoción de Marketing. Para que sus datos sean transferidos.
 
               <p class="texto-justificado">
-                Si usted desea dejar de recibir mensajes promocionales de nuestra parte puede solicitarlo a través del teléfono: <strong> 55-7929-0992</strong> y al teléfono <strong>contacto@siarsa.com.mx</strong>
+                Si usted desea dejar de recibir mensajes promocionales de nuestra parte, puede solicitarlo a través del teléfono: <strong> 55-7929-0992</strong> y al teléfono <strong>contacto@siarsa.com.mx</strong>
               </p>
 
               <p class="texto-justificado">
