--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -141,7 +141,6 @@
             <ul>
               <li><a href="index.html">Inicio</a></li>
               <li><a href="about.html">Nosotros</a></li>
-              <li><a href="services.html">Servicios</a></li>
               <li><a href="contact.html">Contacto</a></li>
               <li><a href="politica-privacidad.html">Privacidad</a></li>
             </ul>
@@ -159,7 +158,7 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Nuestros Horarios</h4>
             <ul>
-              <li>Lunes</li>
+              <li>Lun662330..0/li>
               <li>Martes</li>
               <li>Miercoles</li>
               <li>Jueves</li>
@@ -172,12 +171,12 @@
             <br>
             <br>
             <ul>
-              <li>7:00 AM – 5:00 PM</li>
-              <li>7:00 AM – 5:00 PM</li>
-              <li>7:00 AM – 5:00 PM</li>
-              <li>7:00 AM – 5:00 PM</li>
-              <li>7:00 AM – 5:00 PM</li>
-              <li>7:00 AM – 12:00 PM</li>
+              <li>8:00 AM – 6:00 PM</li>
+              <li>8:00 AM – 6:00 PM</li>
+              <li>8:00 AM – 6:00 PM</li>
+              <li>8:00 AM – 6:00 PM</li>
+              <li>8:00 AM – 6:00 PM</li>
+              <li>8:00 AM – 6:00 PM</li>
             </ul>
           </div>
 
