--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
    <div class="slider">
     <div class="slider-track">
       <div class="slide ">
-        <img src="img/logo-mitsubishi-electric-lasser.jpeg" alt="imagen1">
+        <img src="img/lenoxlogo.png" alt="imagen1">
       </div>
       &nbsp;
       &nbsp;
@@ -364,7 +364,7 @@
       &nbsp;
       &nbsp;
       <div class="slide">
-        <img src="img/Honeywell-Logo.png" alt="imagen8">
+        <img src="img/kalefanslogo.png" alt="imagen8">
       </div>
       &nbsp;
       &nbsp;
@@ -378,14 +378,14 @@
       &nbsp;
       &nbsp;
       <div class="slide">
-        <img src="img/Gree-Logo.png" alt="imagen7">
+        <img src="img/bohn-logo.png" alt="imagen7">
       </div>
       &nbsp;
       &nbsp;
       &nbsp;
       &nbsp;
       <div class="slide">
-        <img src="img/logo-york-002.png" alt="imagen1">
+        <img src="img/bigassfans.png" alt="imagen1">
       </div>
       &nbsp;
       &nbsp;
@@ -399,14 +399,14 @@
       &nbsp;
       &nbsp;
       <div class="slide">
-        <img src="img/logo-Electrolux.png" alt="imagen3">
+        <img src="img/midea-1logo.svg" alt="imagen3">
       </div>
       &nbsp;
       &nbsp;
       &nbsp;
       &nbsp;
       <div class="slide">
-        <img src="img/trane_logo.png" alt="imagen4">
+        <img src="img/lenoxlogo.png" alt="imagen4">
       </div>
       &nbsp;
       &nbsp;
@@ -427,7 +427,7 @@
       &nbsp;
       &nbsp;
       <div class="slide">
-        <img src="img/logo-Electrolux.png" alt="imagen6">
+        <img src="img/bohn-logo.png" alt="imagen6">
       </div>
       &nbsp;
       &nbsp;
